--- a/index.html
+++ b/index.html
@@ -255,11 +255,8 @@
 
         <!---seccion7-->
         <div class="section_7">
-            <h1>VIDEO ABOUT-THE-TEAM</h1>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/2L6JgL76J-I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
             <h1>VIDEO ABOUT-THE-PRODUCT</h1>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/JBiiVyVU9vI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ntzo83G2xqU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
         </div>
 
